[tool.poetry]
name = "cracking-the-coding-interview"
version = "1.0.0"
description = "Solutions and notes from problems in the Cracking the coding interview 6th edition book"
authors = ["Ryan Butler <ryanleonbutler@gmail.com>"]
readme = "README.md"
license = "no license"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
isort = "^5.12.0"
ruff = "^0.0.290"

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.report]
skip_empty = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
